--- a/src/styles/TheatreCategory.module.scss
+++ b/src/styles/TheatreCategory.module.scss
@@ -24,6 +24,10 @@
   }
 }
 
+.main {
+  padding: 0px 5vw;
+}
+
 .pages {
   width: 100%;
   display: flex;
