--- a/src/styles/TheatrePlayer.module.scss
+++ b/src/styles/TheatrePlayer.module.scss
@@ -6,7 +6,7 @@
 
 .content {
   background-color: var(--background-accent);
-  height: calc(100vh - $nav-height-border - 120px);
+  height: calc(100vh - $nav-height-border - 100px);
   margin: 0px auto 0px auto;
   border-radius: 10px;
   margin: calc($nav-height-border / 4) auto;
